p3/confs/app.yml
apiVersion: v1
kind: Service
metadata:
  name: will
  namespace: dev
spec:
  selector:
    app: will
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: will
  namespace: dev
  labels:
    app: will
spec:
  replicas: 1
  selector:
    matchLabels:
      app: will
  template:
    metadata:
      labels:
        app: will
    spec:
      containers:
        - name: will
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
